# text-manipulation-rs

./: .gitignore  Cargo.toml  README.md  license.txt
corpus/: czech.txt  french.txt  hindi.txt  irish.txt  latin.txt  swedish.txt
deepl/: Cargo.toml
deepl/src/: main.rs
fuzz/: Cargo.toml
fuzz/deepl_translate_fuzz_target/: Cargo.toml
fuzz/deepl_translate_fuzz_target/in/: in3  in4  in5
fuzz/deepl_translate_fuzz_target/src/: main.rs
fuzz/dictionary_fuzz_target/: Cargo.toml
fuzz/dictionary_fuzz_target/src/: main.rs
fuzz/fuzz_targets/: fuzz_target_1.rs
fuzz/my_memory_fuzz_target/: Cargo.toml
fuzz/my_memory_fuzz_target/in/: in1  in2
fuzz/my_memory_fuzz_target/src/: main.rs
fuzz/text_generation_fuzz_target/: Cargo.toml
fuzz/text_generation_fuzz_target/src/: main.rs
mymemory/src/: main.rs
src/: arabic.txt  english.txt  german.txt  japanese.txt  lib.rs  main.rs  russian.txt  sample.txt  spanish.txt
src/deepl/: deepl.rs  mod.rs
src/lib/: dictionary.rs  my_memory.rs  text_generator.rs
src/request/: glossary_request.rs  http_request.rs  mod.rs  translation_request.rs
src/text_generator/: mod.rs
