[package]
name = "text_manipulation_rs"
version = "0.1.3"
edition = "2021"
homepage = "https://github.com/BasantaChaulagain/text-manipulation-rs.git"
description = "A crate for generating random placeholder text in different languages."
repository = "https://github.com/BasantaChaulagain/text-manipulation-rs.git"
keywords = ["text-manipulation", "random-text-generate", "languages"]
categories = ["text"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
curl = "0.4.44"
reqwest = { version="0.11", features=["blocking", "json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
cargo-fuzz = "0.11.2"
